fixed: form height, header and article card alignment

--- a/assets/scss/components/header.scss
+++ b/assets/scss/components/header.scss
@@ -2,7 +2,7 @@
   position: fixed;
   top: 0;
   width: 100vw;
-  padding: 20px 20px;
+  padding: 20px 60px 20px 60px;
   background-color: rgba(0, 0, 0, 0.5); /* Ensure the color is set correctly */
   z-index: 100;
   backdrop-filter: blur(5px);
@@ -32,7 +32,6 @@
   align-items: center;
   list-style: none;
   gap: 30px;
-  padding: 0 30px;
 }
 
 .nav__link {
