--- a/assets/scss/pages/_homepage.scss
+++ b/assets/scss/pages/_homepage.scss
@@ -55,13 +55,13 @@
 }
 
 .featuredNews {
-  padding: 26px 0 60px;
+  padding: 20px 60px 60px 60px;
   background-color: white;
   color: black;
   display: flex;
   justify-content: center;
   align-items: center;
-  margin: 20px 20px;
+  //margin: 20px 20px;
 }
 
 .container--featuredNews {
@@ -111,6 +111,7 @@
 
 .featuredCardsList {
   margin-top: 30px;
+  width: 100%;
   display: flex;
   flex-wrap: wrap;
   gap: 30px;
@@ -171,7 +172,7 @@
   display: flex;
   box-sizing: border-box;
   flex-direction: column;
-  min-height: 100vh;
+  max-height: 573px;
   width: 100vw;
   justify-content: center;
   align-items: center;
